test/data/valid/first_chained.py
__version__ = custom = '1.2.3'
__custom__ = version = 42
