test/data/invalid/varassign2.py
version = '1.2.3'
__version__ = version
